# ARMOR

./: LICENSE  Makefile  README.md  environment.yml  example_config.txt  pyproject.toml  requirements.txt
Rscript/: basic_analyse.R  model.R
config/: pipeline_config.yaml
docs/: USAGE.md
scripts/: 01_gene_feature_generation.R  02_snp_feature_generation.R  03_kmer_feature_generation.R  04_feature_selection.R  05_model_evaluation.R  06_visualization.R  07_statistical_analysis.R  08_compare_models.R  09_predict_new_samples.R  basic_analyse.R  generate_features.sh  model.R  run_pipeline.sh
src/: __init__.py  evaluate.py  feature_generation.py  feature_selection.py  model_trainer.py  predict.py  visualize.py
src/utils/: __init__.py  io.py  metrics.py
tests/: __init__.py  test_feature_selection.py  test_model_trainer.py
